--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^16.9.9",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
+    "material-icons": "^0.3.1",
+    "materialize-css": "^1.0.0",
     "prettier": "^2.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -54,5 +56,3 @@
     ]
   }
 }
-
-
