--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint-staged": "^10.5.1",
     "material-icons": "^0.3.1",
     "materialize-css": "^1.0.0",
+    "moment": "^2.29.1",
     "prettier": "^2.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
