--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.19.3",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "clsx": "^1.1.1",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
     "material-icons": "^0.3.1",
